# gamp

./: CHANGES  COMMANDS  FEATURES  FIXME  Makefile.in  README  TODO  amp-0.7.3.lsm  amp.1  amp.h  amp2.c  args.c  audio.c  audio.h  audioIO.c  audioIO.h  audioIO_AIX.c  audioIO_HPUX.c  audioIO_IRIX.c  audioIO_Linux.c  audioIO_SunOS.c  buffer.c  config.h.in  configure  configure.in  controldata.h  dump.c  dump.h  forkplayer.c  forkplayer.h  formats.c  formats.h  gamp-util.c  gamp-util.h  gamp.1  gamp.c  gamp.h  gamp.logo  genre.h  getbits.c  (+28 more)
logos/: gamp.logo  gamp.logo2  gamp.logo3  gamp.logo4  gamp.logo5
