dnl Process this file with autoconf to produce a configure script.
AC_INIT(audio.c)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h unistd.h linux/soundcard.h machine/soundcard.h dmedia/audio.h sys/audioio.h sys/select.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_HEADER_TIME

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(select mlock)

AC_MSG_CHECKING(Checking OS type)
AC_SUBST(OS_TYPE)
OS_TYPE=`uname -s`
AC_MSG_RESULT($OS_TYPE)

AC_MSG_CHECKING(Checking machine architecture)
AC_SUBST(ARCH_TYPE)
ARCH_TYPE=`uname -m`
AC_MSG_RESULT($ARCH_TYPE)

CC=
CFLAGS=
LDFLAGS=
CFLAGS_ARCH=

AC_SUBST(CC)
AC_SUBST(CFLAGS)
AC_SUBST(CFLAGS_ARCH)
AC_SUBST(LDFLAGS)

case "$OS_TYPE" in
  AIX)
    CC="gcc"
    CFLAGS="-O3 -ffast-math -funroll-loops"
    ;;

  Linux|FreeBSD)
    CC="gcc"
    if test "$ARCH_TYPE" = "i486" ; then
      CFLAGS_ARCH="-m486"
    fi
    if test "$ARCH_TYPE" = "i586" ; then
      CFLAGS_ARCH="-i586 -pipe"
    fi
    if test "$OS_TYPE" = "FreeBSD" ; then
      OS_TYPE="BSD"
    fi
    CFLAGS="-DOS_${OS_TYPE} -DARCH_${ARCH_TYPE} -Wall -O6 -ffast-math -DNO_BYTE_SWAPPING ${CFLAGS_ARCH}"
    ;;

  SunOS)
    CC="/opt/SUNWspro/bin/cc"
    CFLAGS="-xO5 -fns -dalign -ftrap=%none -xtarget=native -xlibmil -xsafe=mem -Dinline="
    ;;

  IRIX)
    CC="cc"
    CFLAGS="-Ofast=ip22_4k -Dinline="
    LDFLAGS="-Ofast=ip22_4k -laudio"
    ;;

  IRIX_gcc)
    CC="gcc"
    CFLAGS="-O2 -Dinline="
    LDFLAGS="-laudio"
    ;;

  HPUX)
    CC="/opt/ansic/bin/cc"
    CFLAGS="+O3 +Oall -Ae -Dinline="
    ;;

  HPUX_gcc)
    CC="gcc"
    CFLAGS="-O3 -ffast-math -funroll-loops -fomit-frame-pointer -mpa-risc-1-1 -mschedule=7100"
    LDFLAGS="-L/lib/pa1.1"
    ;;

  *)
    echo Unknown hardware you will probably have problems compiling amp
    ;;

esac

AC_OUTPUT(Makefile)
