dnl Process this file with autoconf to produce a configure script.
AC_INIT(gamp.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.
AC_SEARCH_LIBS(floor, m)
AC_SEARCH_LIBS(initscr, ncurses curses)
AC_SEARCH_LIBS(pthread_create, pthread c_r)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_FUNCS(strchr memcpy)
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(getcwd mkdir select strdup)

AC_MSG_CHECKING(OS type)
AC_SUBST(OS_TYPE)
OS_TYPE=`uname -s`
AC_MSG_RESULT($OS_TYPE)

AC_MSG_CHECKING(machine architecture)
AC_SUBST(ARCH_TYPE)
ARCH_TYPE=`uname -m`
AC_MSG_RESULT($ARCH_TYPE)

CC=
CFLAGS=
LDFLAGS=
CFLAGS_ARCH=

AC_SUBST(CC)
AC_SUBST(CFLAGS)   
dnl AC_SUBST(CFLAGS_ARCH)
AC_SUBST(LDFLAGS)
AC_SUBST(LIBS)
AC_SUBST(INSTALL)

case "$OS_TYPE" in
  AIX)
    CC="gcc"
    CFLAGS="-O3 -ffast-math -funroll-loops"
    ;;

  Linux|FreeBSD)
    CC="gcc"
    if test "$ARCH_TYPE" = "i486" ; then
      CFLAGS_ARCH="-m486"
    fi
    if test "$ARCH_TYPE" = "i586" ; then
      CFLAGS_ARCH="-i586 -pipe"
    fi
    if test "$OS_TYPE" = "FreeBSD" ; then
      OS_TYPE="BSD"
    fi
    if test "$OS_TYPE" = "OpenBSD" ; then
      OS_TYPE="BSD"
    fi
    if test "$OS_TYPE" = "NetBSD" ; then
      OS_TYPE="BSD"
    fi
    CFLAGS="-Wall -O2 ${CFLAGS_ARCH}"
    ;;

  SunOS)
    CC="/opt/SUNWspro/bin/cc"
    CFLAGS="-xO5 -Dinline="
    ;;

  IRIX)
    CC="cc"
    CFLAGS="-Ofast=ip22_4k -Dinline="
    LDFLAGS="-Ofast=ip22_4k"
    ;;

  IRIX_gcc)
    CC="gcc"
    CFLAGS="-O2 -Dinline="
    LDFLAGS=""
    ;;

  HPUX)
    CC="/opt/ansic/bin/cc"
    CFLAGS="+O3 +Oall -Ae -Dinline="
    ;;

  HPUX_gcc)
    CC="gcc"
    CFLAGS="-O3"
    LDFLAGS="-L/lib/pa1.1"
    ;;

  *)
    echo Unknown hardware you will probably have problems compiling gamp
    ;;

esac

AC_OUTPUT(Makefile)
